[MINOR] Fix warnings, formatting, tests (imports, serializable, tabs)